Added new array function "concat" similar to Lua table.concat this makes squirrel dependent on sqstdlib because it uses SQBlob.

--- a/squirrel/Makefile
+++ b/squirrel/Makefile
@@ -2,7 +2,7 @@ SQUIRREL= ..
 
 
 OUT= $(SQUIRREL)/lib/libsquirrel.a
-INCZ= -I$(SQUIRREL)/include -I. -Iinclude
+INCZ= -I$(SQUIRREL)/include -I. -Iinclude -I$(SQUIRREL)/sqstdlib
 DEFS= 
 LIB=	
 
