--- a/squilu.cbp
+++ b/squilu.cbp
@@ -82,6 +82,8 @@
 			<Add option="-Wall" />
 			<Add option="-fno-strict-aliasing" />
 			<Add option="-DWITH_DAD_EXTRAS=1" />
+			<Add option="-DSQ_SUBLATIN=1" />
+			<Add option="-DNEED_SUBLATIN_C2=1" />
 			<Add option="-DSQUSEDOUBLE=1" />
 			<Add option="-DSQUSEDECIMAL642=1" />
 			<Add option="-DNO_EXCEPTION_KEY_NOT_FOUND0=1" />
@@ -192,6 +194,10 @@
 		<Unit filename="squirrel/squtils.h" />
 		<Unit filename="squirrel/sqvm.cpp" />
 		<Unit filename="squirrel/sqvm.h" />
+		<Unit filename="squirrel/sublatin.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="squirrel/sublatin.h" />
 		<Unit filename="../dadbiz++/third-party/sqlite3/sqlite3.c">
 			<Option compilerVar="CC" />
 		</Unit>
