--- a/ext/mpdecimal/mpdecimal.cbp
+++ b/ext/mpdecimal/mpdecimal.cbp
@@ -21,13 +21,28 @@
 			<Target title="Release">
 				<Option output="libmpdecimal" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
-				<Option object_output="/home/mingo/dev/mpdecimal-2.3//.objs" />
+				<Option object_output="/home/mingo/dev/mpdecimal-2.3/.objs" />
 				<Option type="2" />
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Compiler>
+					<Add option="-O3" />
 					<Add option="-Wall" />
-					<Add option="-O2" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+				</Linker>
+			</Target>
+			<Target title="Release win32">
+				<Option output="libmpdecimal-win32" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="" />
+				<Option object_output="/home/mingo/dev/mpdecimal-2.3/.objs-win32" />
+				<Option type="2" />
+				<Option compiler="mingw32_compiler" />
+				<Option createDefFile="1" />
+				<Compiler>
+					<Add option="-O3" />
+					<Add option="-Wall" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
